<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="logout">Sign Out</string>
    <string name="loading">Loading...</string>
    <string name="item">Item</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="top_5_products">Items</string>
    <string name="top_5_categories">Categories</string>
    <string name="top_5_employees">Employees</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="new_to_loyverse_text">New to Loyverse?</string>

    <!--Metrics name-->
    <string name="sales_summary_gross_sales">Gross sales</string>
    <string name="sales_summary_refunds">Refunds</string>
    <string name="sales_summary_discounts">Discounts</string>
    <string name="sales_summary_net_sales">Net sales</string>
    <string name="sales_summary_cost_of_goods">Cost of goods</string>
    <string name="sales_summary_gross_profit">Gross profit</string>
    <string name="sales_summary_taxes">Taxes</string>
    <string name="sales_summary_tips">Tips</string>
    <string name="sales_summary_total_tendered">Total tendered</string>

    <string-array name="period_array">
        <item>@string/today</item>
        <item>@string/this_week</item>
        <item>@string/this_month</item>
        <item>@string/this_year</item>
        <item>@string/custom_period</item>
    </string-array>

    <string name="product_uncounted_stock_symbols" translatable="false">"\u2013"</string>

    <string name="product_track_stock_off" translatable="false">"\u200a"</string>

    <!--Reset password activity-->
    <string name="reset_password_activity_title">Reset password</string>
    <string name="reset_email">Enter your email address to receive instructions to reset your password.</string>

    <!--Send Email dialog-->
    <string name="email_sent_dialog_title">Email sent</string>
    <string name="email_sent_dialog_msg">Check your inbox for further instructions.</string>

    <!--Logout dialog-->
    <string name="logout_dialog_title">Sign out</string>
    <string name="logout_dialog_msg">Are you sure you want to sign out?</string>

    <!--Retry dialog-->
    <string name="retry_dialog_no_internet_msg">No internet connection.</string>
    <string name="retry_dialog_msg">An unexpected error occurred. Please try again later.</string>
    <string name="retry">Retry</string>

    <!--Bottom bar tab titles-->
    <string name="tab_reports">Sales</string>
    <string name="tab_products">Items</string>
    <string name="tab_settings">Settings</string>

    <!--Product item-->
    <string name="product_item_stock">%s in stock</string>
    <string name="product_divider">"\u200a" | "\u200a"</string>

    <!--Product variants-->
    <string name="product_variants">%s variants</string>
    <string name="variant_track_stock_off"> "\u200a"</string>

    <!--Products activity-->
    <string name="product_filter_type_empty_stock">Out of stock</string>
    <string name="product_filter_type_low_stock">Low stock</string>
    <string name="product_filter_type_all">All items</string>

    <!--Settings fragment-->
    <string name="setting_stock_notification_title">Stock notifications</string>
    <string name="setting_stock_notification_description">Notify when items are low or out of stock.</string>

    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="custom_period">Custom period</string>

    <string name="name">Employee</string>
    <string name="product">Item</string>
    <string name="category">Category</string>
    <string name="net">Net sales</string>

    <string name="main_indicators">Sales summary</string>
    <string name="total">Total</string>
    <string name="select_range">Select period</string>
    <string name="send">Send</string>

    <!--Main dashboard charts-->
    <string name="main_operations_chart_title">Receipts</string>
    <string name="main_total_sales_chart_title">Net sales</string>
    <string name="main_average_ticket_chart_title">Average sale</string>

    <string name="employees_sales">Sales by employee</string>
    <string name="categories_sales">Sales by category</string>
    <string name="products_sales">Sales by item</string>
    <string name="sales_summary">Sales summary</string>
    <string name="outlet_selection">Select store</string>

    <!--Error msg-->
    <string name="error_invalid_email">Enter a valid email.</string>
    <string name="error_wrong_password">Incorrect email or password. Please try again.</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="error_bad_auth">Authorization error.</string>
    <string name="error_email_not_exist">Account with this email does not exist. Please try again.</string>
    <string name="error_owner_already_deleted">The account is blocked. Contact with the support team.</string>
    <string name="no_network">Network not available.</string>
    <string name="no_such_device">An unknown error has occurred.</string>
    <string name="no_connection">No internet connection.</string>
    <string name="unknown_login_email">Unknown email.</string>
    <string name="blocked_by_billing">Blocked by billing.</string>
    <string name="user_was_blocked">User is blocked.</string>
    <string name="access_denied">Access denied.</string>

    <string name="access_rights_required">Access rights required</string>
    <string name="access_rights_required_msg">You can request necessary permissions from the account owner.</string>

    <string name="default_zero_value">0</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>

    <string-array name="large_value_suffixes">
        <item />
        <item>K</item>
        <item>M</item>
        <item>B</item>
        <item>T</item>
    </string-array>

    <!--crowdin compatible tags?-->
    <string name="low_stock_push">Item <xliff:g example="mango" id="ware">%s</xliff:g> is running low. <xliff:g example="5" id="count">%s</xliff:g> remain in stock.</string>
    <string name="out_of_stock_push">Item <xliff:g example="mango" id="ware">%s</xliff:g> is out of stock.</string>
    <string name="multishop_low_stock_push">Item <xliff:g example="mango" id="ware">%s</xliff:g> is running low at <xliff:g example="Magic shop" id="outlet">%s</xliff:g>. <xliff:g example="5" id="count">%s</xliff:g> remain in stock.</string>
    <string name="multishop_out_of_stock_push">Item <xliff:g example="mango" id="ware">%s</xliff:g> is out of stock at <xliff:g example="Magic shop" id="outlet">%s</xliff:g>.</string>
    <string name="stock_item_warning">Stock item warning</string>
    <string name="search">Search</string>


    <!-- Billing-->
    <string name="subscription">Access denied</string>
    <string name="upgrade_Account">Please update your account in the Back Office.</string>
    <string name="update_Account">Update account</string>
    <string name="contact_account_owner">Contact account owner</string>
    <string name="exit">Sign out</string>
    <string name="billing_out_dialog_msg">Are you sure you want to exit?</string>
    <string name="confirmation_exit">Sign out</string>
    <string name="no">Cancel</string>

    <plurals name="variantCount">

        <item quantity="one">%d variant</item>
        <item quantity="other">%d variants</item>

    </plurals>

    <!--New to Loyverse-->
    <string name="description_kds_l1">Loyverse Dashboard is a complementary app to Loyverse POS.</string>
    <string name="description_kds_l2">To get started, please install the Loyverse POS app.</string>

    <!--Vertical Calendar-->
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="apply">Apply</string>
    <string name="setting_use_darktheme">Use dark theme</string>
    <string name="all_day">All day</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_start_endtime">Please Select Start Time and End Time</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="symbol_bullet">•</string>

</resources>
