<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/BaseTextStyle.AccessDenied"
            android:text="@string/subscription"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/access_billing_ok"
            style="@style/BaseTextStyle.AccessDenied"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/upgrade_Account"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/access_billing_deny"
            style="@style/BaseTextStyle.AccessDenied"
            android:text="@string/contact_account_owner"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/update_account"
            style="@style/ButtonBlueBordered"
            android:layout_width="288dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="16dp"
            android:text="@string/update_Account"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/exit"
            style="@style/ButtonExit"
            android:text="@string/exit" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>