<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/variant_item_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/parentProductLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height">

        <ImageView
            android:id="@+id/product_icon"
            style="@style/ItemIcon"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/item_edge_margin"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/product_icon_warning_badge"
            android:layout_width="@dimen/product_icon_warning_badge_size"
            android:layout_height="@dimen/product_icon_warning_badge_size"
            android:layout_alignEnd="@id/product_icon"
            android:layout_alignBottom="@id/product_icon"
            android:layout_marginEnd="@dimen/product_item_warning_badge_margin"
            android:layout_marginBottom="@dimen/product_item_warning_badge_margin"
            android:background="@drawable/ic_badge_background"
            android:contentDescription="@string/stock_item_warning"
            android:src="@drawable/ic_error" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/common_item_margin_left"
            android:layout_marginEnd="@dimen/common_item_margin_left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name"
                style="@style/BaseTextStyle.ItemName"
                android:layout_gravity="start"
                android:maxLines="1"
                android:textAlignment="viewStart"
                tools:text="Some product" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_in_stock"
                    style="@style/BaseTextStyle.SecondaryName"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/product_item_stock"
                    android:textDirection="ltr"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/vertical_divider"
                    style="@style/BaseTextStyle.SecondaryName"
                    android:layout_width="wrap_content"
                    android:lines="1"
                    android:text="@string/product_divider"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/product_variants"
                    style="@style/BaseTextStyle.SecondaryName"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:lines="1"
                    android:text="@string/product_variants"
                    android:textDirection="ltr"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/arrow_more_variants"
            android:layout_width="@dimen/material_icon_size"
            android:layout_height="@dimen/material_icon_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/material_icon_button_small_margin"
            android:layout_marginEnd="@dimen/icon_edge_margin"
            android:clickable="true"
            android:contentDescription="@string/backward"
            android:focusable="true"
            android:src="@drawable/ic_expand_more_grey" />

        <View
            android:id="@+id/item_bottom_divider"
            style="@style/HorizontalViewDivider"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/item_edge_margin"
            android:layout_marginEnd="@dimen/item_edge_margin"
            android:background="@color/light_grey" />
    </RelativeLayout>
</LinearLayout>