<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary1">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/BaseTextStyle.ToolbarTitle"
                android:layout_gravity="center"
                android:text="@string/reset_password_activity_title" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:isScrollContainer="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:clipToPadding="false"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="20dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/BaseTextStyle.ItemName_Login"
                android:text="@string/reset_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/hint_color_login"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_field"
                    style="@style/BaseTextStyle.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/hint_color_login"
                    android:hint="@string/email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textColor="@color/main_font_color_login"
                    android:textSize="@dimen/item_text_size" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset_password_button"
                style="@style/ButtonResetPassword"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="-4dp"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

