<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:fadeScrollbars="true"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:isScrollContainer="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ic_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_logo_container"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary1"
            android:foregroundGravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:paddingVertical="8dp"
                android:scaleType="fitCenter"
                android:scaleX="0.91"
                android:scaleY="0.91"
                android:src="@drawable/dashboard_signin_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/parent_margin"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/parent_margin"
                android:textColorHint="@color/hint_color_login"
                app:hintTextAppearance="@style/TextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_field"
                    style="@style/BaseTextStyle.EditText"
                    android:backgroundTint="@color/hint_color_login"
                    android:hint="@string/email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    tools:text="oleksandr.ovonord@gmail.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/parent_margin"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/parent_margin"
                android:layout_marginBottom="2dp"
                android:textColorHint="@color/hint_color_login"
                app:hintTextAppearance="@style/TextLabel"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/hint_color_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_field"
                    style="@style/BaseTextStyle.EditText"
                    android:backgroundTint="@color/hint_color_login"
                    android:hint="@string/password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    tools:text="asdzxqwe" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                style="@style/ButtonResetPassword"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/sign_in_button_top_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/forgot_password"
                style="@style/BaseTextStyle.ItemName_Login"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/forgot_password_text" />

            <TextView
                android:id="@+id/new_to_loyverse"
                style="@style/BaseTextStyle.ItemName_Login"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="@dimen/ll_logo_bottom_margin"
                android:gravity="center_horizontal"
                android:text="@string/new_to_loyverse_text" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
